# rustyproduction

./: Cargo.toml  flake.nix
migrations/: 20230101010101_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
